--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 astroid==2.1.0
+atomicwrites==1.3.0
+attrs==18.2.0
 Click==7.0
 Flask==1.0.2
 isort==4.3.4
@@ -7,9 +9,13 @@ Jinja2==2.10
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.0
 mccabe==0.6.1
+more-itertools==5.0.0
+pluggy==0.8.1
 psycopg2==2.7.7
 psycopg2-binary==2.7.7
+py==1.7.0
 pylint==2.2.2
+pytest==4.2.0
 six==1.12.0
 typed-ast==1.3.1
 Werkzeug==0.14.1
