--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,38 @@
-astroid==2.1.0
-atomicwrites==1.3.0
-attrs==18.2.0
-Click==7.0
-Flask==1.0.2
-isort==4.3.4
-itsdangerous==1.1.0
-Jinja2==2.10
-lazy-object-proxy==1.3.1
-MarkupSafe==1.1.0
-mccabe==0.6.1
-more-itertools==5.0.0
-pluggy==0.8.1
-psycopg2==2.7.7
-psycopg2-binary==2.7.7
-py==1.7.0
-pylint==2.2.2
-pytest==4.2.0
-six==1.12.0
-typed-ast==1.3.1
-Werkzeug==0.14.1
-wrapt==1.11.1
+asn1crypto==0.24.0
+Brlapi==0.6.6
+certifi==2018.1.18
+chardet==3.0.4
+command-not-found==0.3
+cryptography==2.1.4
+defer==1.0.6
+distro-info==0.18
+evdev==0.7.0
+httplib2==0.9.2
+idna==2.6
+keyring==10.6.0
+keyrings.alt==3.0
+language-selector==0.1
+louis==3.5.0
+netifaces==0.10.4
+olefile==0.45.1
+onboard==1.4.1
+pexpect==4.2.1
+Pillow==5.1.0
+pycairo==1.16.2
+pycrypto==2.6.1
+pygobject==3.26.1
+python-apt===1.6.3.0.1-elementary6-ubuntu5.0.1
+python-debian==0.1.32
+pyudev==0.21.0
+pyxdg==0.25
+PyYAML==3.12
+reportlab==3.4.0
+requests==2.18.4
+requests-unixsocket==0.1.5
+SecretStorage==2.3.1
+six==1.11.0
+ubuntu-drivers-common==0.0.0
+ufw==0.35
+urllib3==1.22
+virtualenv==16.4.0
+xkit==0.0.0
