--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,38 @@
 asn1crypto==0.24.0
+atomicwrites==1.3.0
+attrs==18.2.0
 Brlapi==0.6.6
 certifi==2018.1.18
 chardet==3.0.4
+Click==7.0
 command-not-found==0.3
 cryptography==2.1.4
 defer==1.0.6
 distro-info==0.18
 evdev==0.7.0
+Flask==1.0.2
 httplib2==0.9.2
 idna==2.6
+itsdangerous==1.1.0
+Jinja2==2.10
 keyring==10.6.0
 keyrings.alt==3.0
 language-selector==0.1
 louis==3.5.0
+MarkupSafe==1.1.0
+more-itertools==6.0.0
 netifaces==0.10.4
 olefile==0.45.1
 onboard==1.4.1
 pexpect==4.2.1
 Pillow==5.1.0
+pluggy==0.8.1
+psycopg2==2.7.7
+py==1.7.0
 pycairo==1.16.2
 pycrypto==2.6.1
 pygobject==3.26.1
+pytest==4.2.0
 python-apt===1.6.3.0.1-elementary6-ubuntu5.0.1
 python-debian==0.1.32
 pyudev==0.21.0
@@ -30,9 +42,10 @@ reportlab==3.4.0
 requests==2.18.4
 requests-unixsocket==0.1.5
 SecretStorage==2.3.1
-six==1.11.0
+six==1.12.0
 ubuntu-drivers-common==0.0.0
 ufw==0.35
 urllib3==1.22
 virtualenv==16.4.0
+Werkzeug==0.14.1
 xkit==0.0.0
